--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <code id="typed"></code>
 
   <div id="gist">
-    <a href="">View on Github</a>
+    <a href="">View gist on Github</a>
   </div>
 
   <script src="http://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
