--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
     <a href="">View full Gist on GitHub</a>
   </div>
 
-  <!-- ajx and tpyo.js are repos under github.com/joeles. i'll bower all this up later -->
-  <script src="ajx/ajx.js" type="text/javascript"></script>
-  <script src="tpyo.js/tpyo.js" type="text/javascript"></script>
+  <script src="components/ajx/ajx.js" type="text/javascript"></script>
+  <script src="components/tpyo/tpyo.js" type="text/javascript"></script>
   <script src="lmctfy.js" type="text/javascript"></script>
 
 </body>
